--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Category:</strong>
+  <%= @question.ques_cats %>
+</p>
+
+<p>
   Published at
   <%= @question.created_at.strftime('%b %d, %Y') %>
 </p>
