--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -19,6 +19,12 @@
     <%= f.label :content %><br>
     <%= f.text_area :content %>
   </div>
+  <%= fields_for(@question_category) do |qc| %>
+     <div class="field">
+      <%= qc.label 'All Categories' %><br>
+      <%= collection_select(:categories, :id, @all_categories, :id, :name, {}, {multiple: true}) %>
+    </div>
+  <% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
